--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 KTU-SA-API/KTU-SA-API/appsettings.json
 KTU-SA-API/.editorconfig
 KTU-SA-API/KTU-SA-API/appsettings.Development.json
+KTU-SA-WEB/.env
