--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.12",
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.6.0",
+    "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
