--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@mui/material-next": "^6.0.0-alpha.112",
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.12",
