Fix: vercel deployment fixed

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ KTU-SA-API/KTU-SA-API/appsettings.json
 KTU-SA-API/.editorconfig
 KTU-SA-API/KTU-SA-API/appsettings.Development.json
 KTU-SA-WEB/.env
+
+.vercel
