--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -18,8 +18,11 @@
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.12",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
