--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -18,6 +18,7 @@
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.12",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
