--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,25 @@ KTU-SA-API/KTU-SA-API/appsettings.Development.json
 KTU-SA-WEB/.env
 
 .vercel
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
