--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -16,8 +16,9 @@
     "@mui/material": "^5.14.12",
     "@mui/material-next": "^6.0.0-alpha.112",
     "@react-oauth/google": "^0.11.1",
+    "@tanstack/react-query": "^5.26.3",
     "@tinymce/tinymce-react": "^4.3.2",
-    "axios": "^1.6.0",
+    "axios": "^1.6.7",
     "framer-motion": "^10.16.12",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
