--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -20,12 +20,16 @@
     "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.7",
     "framer-motion": "^10.16.12",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-i18next": "^14.1.0",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
