--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -23,6 +23,7 @@
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
+    "i18next-intervalplural-postprocessor": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
