--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -31,11 +31,14 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-i18next": "^14.1.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.48.0",
     "eslint-config-react-app": "^7.0.1",
