--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -23,8 +23,10 @@
     "i18next-intervalplural-postprocessor": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.21.0",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
