--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,12 +15,15 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@tanstack/react-query": "^5.28.9",
+    "@types/react": "^18.2.73",
     "axios": "^1.6.7",
+    "eslint": "^8.48.0",
     "framer-motion": "^11.0.24",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
     "i18next-intervalplural-postprocessor": "^3.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
@@ -29,19 +32,18 @@
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "@types/react-slick": "^0.23.13",
+    "slick-carousel": "^1.8.1",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.48.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^5.2.7",
     "vite-plugin-eslint": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.2.23",
+    "@types/react-slick": "^0.23.13",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3"
   }
 }
