--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.14",
     "@tanstack/react-query": "^5.28.9",
     "@types/react": "^18.2.73",
+    "@vitejs/plugin-react": "^4.0.3",
     "axios": "^1.6.7",
     "eslint": "^8.48.0",
     "framer-motion": "^11.0.24",
@@ -33,16 +34,16 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "@vitejs/plugin-react": "^4.0.3",
     "vite": "^5.2.7",
     "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/react-dom": "^18.2.23",
     "@types/react-slick": "^0.23.13",
-    "eslint-plugin-react": "^7.32.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3"
   }
