--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.13",
     "next": "^14.2.5",
     "next-intl": "^3.15.3",
