--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.16.0",
-    "@mui/material": "^5.16.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.13",
-    "next": "^14.2.5",
-    "next-intl": "^3.15.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.2.2",
+    "next-intl": "^4.0.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
@@ -27,12 +27,12 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.2.2",
     "typescript": "^5"
   }
 }
