--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -6,19 +6,19 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.13",
     "next": "15.2.2",
-    "next-intl": "^4.0.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next-intl": "^4.4.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
@@ -26,13 +26,13 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/node": "^24.9.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
-    "eslint": "^8",
-    "eslint-config-next": "15.2.2",
-    "typescript": "^5"
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^16.0.0",
+    "typescript": "^5.9.3"
   }
 }
