--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -6,24 +6,26 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "eslint --fix .",
+    "validate-locales": "node ./scripts/validate-locales.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@vercel/analytics": "^1.3.1",
-    "framer-motion": "^11.2.13",
-    "next": "15.2.2",
+    "motion": "^12.23.24",
+    "next": "^16.0.0",
     "next-intl": "^4.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
-    "react-slick": "^0.30.2",
-    "sharp": "^0.33.4",
-    "slick-carousel": "^1.8.1"
+    "react-slick": "^0.31.0",
+    "sharp": "^0.34.4",
+    "slick-carousel": "^1.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.9.1",
