--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -3,36 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --fix .",
+    "validate-locales": "node ./scripts/validate-locales.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.16.0",
-    "@mui/material": "^5.16.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@vercel/analytics": "^1.3.1",
-    "framer-motion": "^11.2.13",
-    "next": "^14.2.5",
-    "next-intl": "^3.15.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "motion": "^12.23.24",
+    "next": "^16.0.0",
+    "next-intl": "^4.4.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
-    "react-slick": "^0.30.2",
-    "sharp": "^0.33.4",
-    "slick-carousel": "^1.8.1"
+    "react-slick": "^0.31.0",
+    "sharp": "^0.34.4",
+    "slick-carousel": "^1.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^24.9.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "typescript": "^5"
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^16.0.0",
+    "typescript": "^5.9.3"
   }
 }
