--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@vercel/analytics": "^1.3.1",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "motion": "^12.23.24",
     "next": "^16.0.0",
     "next-intl": "^4.4.0",
@@ -34,7 +35,7 @@
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
     "eslint": "^9.38.0",
-    "eslint-config-next": "^16.0.0",
+    "eslint-config-next": "^16.0.1",
     "typescript": "^5.9.3"
   }
 }
