--- a/KTU-SA-WEB/package.json
+++ b/KTU-SA-WEB/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^7.3.8",
     "@mui/material-nextjs": "^7.3.8",
     "@vercel/analytics": "^1.6.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "motion": "^12.34.3",
     "next": "^16.0.0",
     "next-intl": "^4.8.3",
@@ -26,9 +28,7 @@
     "react-dom": "^19.2.4",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
-    "react-slick": "^0.31.0",
     "sharp": "^0.34.5",
-    "slick-carousel": "^1.8.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -36,7 +36,6 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@types/react-scroll": "^1.8.10",
-    "@types/react-slick": "^0.23.13",
     "eslint": "^9.39.3",
     "eslint-config-next": "^16.0.0",
     "eslint-config-prettier": "^10.1.8",
